app1Cryptography/microservice1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-microservice1
  template:
    metadata:
      labels:
        app: app1-microservice1
    spec:
      containers:
      - name: app1-microservice1
        image: b0rkemborina/zta-cybersec-suite:app1microservice1
        ports:
        - containerPort: 8001
