app1Cryptography/microservice1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-microservice1
spec:
  selector:
    app: app1-microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
