app1Cryptography/microservice1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /cryptography/encrypt
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app1-microservice1
        pathType: Prefix
        backend:
          service:
            name: app1-microservice1
            port:
              number: 80
